@@ -15,8 +15,8 @@ import java.util.List;
 import java.util.Optional;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.security.test.context.support.WithMockUser;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import uk.gov.hmcts.reform.iacasedocumentsapi.component.testutils.*;
 import uk.gov.hmcts.reform.iacasedocumentsapi.component.testutils.fixtures.PreSubmitCallbackResponseForTest;
 import uk.gov.hmcts.reform.iacasedocumentsapi.domain.entities.AppealType;
@@ -30,7 +30,7 @@ import uk.gov.hmcts.reform.iacasedocumentsapi.utilities.DocmosisStub;
 class GenerateDecisionAndReasonsTestWiremock extends SpringBootIntegrationTest implements WithServiceAuthStub,
         WithDocumentUploadStub, DocmosisStub, WithIdamStub, GivensBuilder, WithRoleAssignmentStub {
 
-    @MockBean
+    @MockitoBean
     private FeatureToggler featureToggler;
 
     @ParameterizedTest
@@ -79,7 +79,7 @@ class GenerateDecisionAndReasonsTestWiremock extends SpringBootIntegrationTest i
         Optional<List<IdValue<DocumentWithMetadata>>> draftDecisionAndReasonsDocuments =
             response.getAsylumCase().read(DRAFT_DECISION_AND_REASONS_DOCUMENTS);
 
-        IdValue<DocumentWithMetadata> documentWithMetadataIdValue = draftDecisionAndReasonsDocuments.get().get(0);
+        IdValue<DocumentWithMetadata> documentWithMetadataIdValue = draftDecisionAndReasonsDocuments.get().getFirst();
 
         assertThat(draftDecisionAndReasonsDocuments.get().size()).isEqualTo(1);
         assertThat(documentWithMetadataIdValue.getValue().getTag()).isEqualTo(DECISION_AND_REASONS_DRAFT);
